--- a/config/database.yml
+++ b/config/database.yml
@@ -48,11 +48,4 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: travelnogo_api_production
-  username: travelnogo
-  password: <%= ENV['TRAVELNOGO_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
