--- a/config/database.yml
+++ b/config/database.yml
@@ -48,4 +48,8 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  url: <%= ENV['DATABASE_URL'] %>
+  adapter: postgresql
+  encoding: unicode
+  database: travelnogo_api_production
+  username: travelnogo_api
+  password: <%= ENV['TRAVELNOGO_API_DATABASE_PASSWORD'] %>
