Start to integrate with kub

--- a/config/database.yml
+++ b/config/database.yml
@@ -47,6 +47,14 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+#production:
+#  adapter: postgresql
+#  encoding: unicode
+#  database: travelnogo_api_production
+#  username: travelnogo_api
+#  password: <%#= ENV['TRAVELNOGO_API_DATABASE_PASSWORD'] %>
+
+
 production:
   adapter: postgresql
   encoding: unicode
