--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,18 @@
 version: '3'
 services:
-  linkedin.rails.web:
+  web:
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myapp
     ports:
       - "3000:3000"
+    environment:
+      RAILS_MAX_THREADS: 8
+      REDIS_HOST: redis
+    depends_on:
+      - redis
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
