--- a/config/database.yml
+++ b/config/database.yml
@@ -58,6 +58,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
+  host: 34.87.61.137
   database: travelnogo_api_production
-  username: travelnogo_api
-  password: <%= ENV['TRAVELNOGO_API_DATABASE_PASSWORD'] %>
+  username: <%= ENV['PROD_MYSQL_USERNAME'] %>
+  password: <%= ENV['PROD_MYSQL_PASSWORD'] %>
