--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 version: '3'
 services:
   web:
-    build: .
+    image: klementtandn/travelnogo-api_web
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
-    volumes:
-      - .:/myapp
+#    volumes:
+#      - .:/myapp
     ports:
       - "3000:3000"
     environment:
       RAILS_MAX_THREADS: 8
       REDIS_HOST: redis
+      REDIS_URL: redis://redis:6379/0
     depends_on:
       - redis
   redis:
