--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-
+/config/credentials.yml.enc
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
