--- a/config/database.yml
+++ b/config/database.yml
@@ -59,5 +59,5 @@ production:
   <<: *default
   database: travelnogo_production
   username: travelnogo
-  password: <%= ENV['TRAVELNOGO_DATABASE_PASSWORD'] %>
-  host: <%= ENV['DB_HOST'] %>
+  password: "password"
+  host: "10.109.0.2"
