--- a/deployment.yml
+++ b/deployment.yml
@@ -47,4 +47,4 @@ spec:
             - name: REDIS_HOST
               value: redis-master
             - name: REDIS_PORT
-              value: "6379
+              value: "6379"
