Update for kub db

--- a/config/database.yml
+++ b/config/database.yml
@@ -46,18 +46,19 @@ test:
 #
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
-#
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: travelnogo_api_production
-  username: travelnogo_api
-  password: <%= ENV['TRAVELNOGO_API_DATABASE_PASSWORD'] %>
 
-
+#Heroku db config
 #production:
-#  <<: *default
-#  database: travelnogo_production
-#  username: travelnogo
-#  password: <%#= ENV['TRAVELNOGO_DATABASE_PASSWORD'] %>
-#  host: <%#= ENV['DB_HOST'] %>
+#  adapter: postgresql
+#  encoding: unicode
+#  database: travelnogo_api_production
+#  username: travelnogo_api
+#  password: <%#= ENV['TRAVELNOGO_API_DATABASE_PASSWORD'] %>
+
+#Kube db config
+production:
+  <<: *default
+  database: travelnogo_production
+  username: travelnogo
+  password: <%= ENV['TRAVELNOGO_DATABASE_PASSWORD'] %>
+  host: <%= ENV['DB_HOST'] %>
