Update for kube

--- a/config/database.yml
+++ b/config/database.yml
@@ -48,17 +48,17 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 
 #Heroku db config
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: travelnogo_api_production
-  username: travelnogo_api
-  password: <%= ENV['TRAVELNOGO_API_DATABASE_PASSWORD'] %>
+#production:
+#  adapter: postgresql
+#  encoding: unicode
+#  database: travelnogo_api_production
+#  username: travelnogo_api
+#  password: <%#= ENV['TRAVELNOGO_API_DATABASE_PASSWORD'] %>
 
 #Kube db config
-#production:
-#  <<: *default
-#  database: travelnogo_production
-#  username: travelnogo
-#  password: <%#= ENV['TRAVELNOGO_DATABASE_PASSWORD'] %>
-#  host: <%#= ENV['DB_HOST'] %>
+production:
+  <<: *default
+  database: travelnogo_production
+  username: travelnogo
+  password: <%= ENV['TRAVELNOGO_DATABASE_PASSWORD'] %>
+  host: <%= ENV['DB_HOST'] %>
