Add redis for heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -48,17 +48,27 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 
 #Heroku db config
-#production:
-#  adapter: postgresql
-#  encoding: unicode
-#  database: travelnogo_api_production
-#  username: travelnogo_api
-#  password: <%#= ENV['TRAVELNOGO_API_DATABASE_PASSWORD'] %>
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: travelnogo_api_production
+  username: travelnogo_api
+  password: <%= ENV['TRAVELNOGO_API_DATABASE_PASSWORD'] %>
 
 #Kube db config
-production:
-  <<: *default
-  database: travelnogo_production
-  username: travelnogo
-  password: <%= ENV['TRAVELNOGO_DATABASE_PASSWORD'] %>
-  host: <%= ENV['DB_HOST'] %>
+#production:
+#  <<: *default
+#  host: <%#= ENV['POSTGRESQL_HOST'] %>
+#  username: <%#= ENV['POSTGRESQL_USER_NAME'] %>
+#  password: <%#= ENV['POSTGRESQL_PASSWORD'] %>
+#  pool: 5
+#  database: <%#= ENV['POSTGRESQL_DB'] %>
+
+#staging:
+#  adapter: postgresql
+#  encoding: unicode
+#  host: <%#= ENV['POSTGRESQL_HOST'] %>
+#  username: <%#= ENV['POSTGRESQL_USER_NAME'] %>
+#  password: <%#= ENV['POSTGRESQL_PASSWORD'] %>
+#  pool: 5
+#  database: <%#= ENV['POSTGRESQL_DB'] %>
