--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,9 @@ jobs:
           TEST_POSTGRES_USER: postgres
       - image: postgres:9.6
         environment:
-          POSTGRES_PASSWORD: root
+          POSTGRES_DB: root 
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: travelnogo_api_test
       - image: redis
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
