Add slack notificaiton

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ workflows:
           filters:
             branches:
               only: master
+          post-deploy:
+            name: Update Slack
+            command: ./.circleci/update_slack.sh
 jobs:
   build:
     docker:
