--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ workflows:
             branches:
               only: master
           post-deploy:
-            - run
+            - run:
               name: Update Slack
               command: ./.circleci/update_slack.sh
 jobs:
