--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,16 +11,16 @@ workflows:
   heroku_deploy:
     jobs:
       - build
-      - heroku/deploy-via-git: # Use the pre-configured job, deploy-via-git
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
-          post-deploy:
-            - run:
-                name: Update Slack
-                command: ./.circleci/update_slack.sh
+      # - heroku/deploy-via-git: # Use the pre-configured job, deploy-via-git
+      #     requires:
+      #       - build
+      #     filters:
+      #       branches:
+      #         only: master
+      #     post-deploy:
+      #       - run:
+      #           name: Update Slack
+      #           command: ./.circleci/update_slack.sh
 
 jobs:
   build:
