--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,9 @@ jobs:
      machine:
        enabled: true
      steps:
+       - add_ssh_keys:
+          fingerprints:
+            - "79:d4:17:6c:3e:50:e3:4e:71:cb:77:bd:79:e3:c3:6e"
        - run:
            name: Deploy Over SSH
            command: |
