Updat ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
        - run:
            name: Deploy Over SSH
            command: |
-             ssh $SSH_USER@$SSH_HOST "cd travelnogo-api && ./script/deploy.sh"
+             ssh $SSH_USER@$SSH_HOST
        - run:
             name: Update Slack
             command: ./.circleci/update_slack.sh
